Version 0.8.0
=============
* Rectangle::intersect has been renamed to Rectangle::isIntersecting.
* Widget::hasModalFocus and Widget::hasModalMouseInputFocus has been
  renamed to Widget::isModalFocused and Widget::isModalMouseInputFocused.
* Widget::generateAction has been renamed to 
  Widget::distributeActionEvent.
* All the examples have been improved. Examples have been added for
  HGE, OpenGL with SDL and for OpenGL with Allegro.
* Widget::drawBorder, Widget::getBorderSize and Widget::setBorderSize
  have been renamed to Widget::drawFrame, Widget::getFrameSize and
  Widget::setFrameSize.
* The alignment enum in Graphics, the orientation enum in Slider and
  the scroll policy enum in ScrollArea are no longer anonymous enums.
* RadioButton::setMarked and RadioButton::isMarked have been 
  renamed to RadioButton::setSelected and RadioButton::isSelected.
* CheckBox::setMarked, CheckBox::isMarked and CheckBox::toogle have been 
  renamed to CheckBox::setSelected, CheckBox::isSelected and
  CheckBox::toogleSelected.
* An image button widget, a button capable of displaying an image,
  has been added.
* A widget listener has been added used to listen for resized events,
  hidden events, shown events and moved events from a widget.
* Two new widgets have been added, a tabbed area widget and a tab widget
  to be used with the tabbed widget.
* A selection listener interface has been added used to listen for
  value change events from a list box and a drop down.
* A bug has been fixed where mouse entered and exited events weren't
  honored when a widget gained or released modal focus or modal mouse input
  focus.
* An id property has been added to Widget. The property can be used to uniquely
  identify widgets inside a container. BasicContainer and Container have been
  enhanced with the ability to find a widget given an id. An id can be
  useful when using GUIs created from an XML file or created with a Gui 
  editor.