@@ -1,5 +1,12 @@
 Version 0.8.0
 =============
+* Widget::showPart has been added to be used when a specific
+  part of a widget should be visible. An example is when a text
+  area wants a specific text part to be visible in a scroll area.
+  This function uses BasicContainer::showWidgetPart.
+* ListBox::setWrappingKeyboardSelection and
+  ListBox::isWrappingKeyboardSelection have been renamed to
+  ListBox::setWrappingEnabled and ListBox::isWrappingEnabled.
 * Rectangle::intersect has been renamed to Rectangle::isIntersecting.
 * Widget::hasModalFocus and Widget::hasModalMouseInputFocus has been
   renamed to Widget::isModalFocused and Widget::isModalMouseInputFocused.
